refactor: 重构cluster，使其整体功能正常。引入业务数据存储、零拷贝record定义以及调度模块
1. 重构cluster,使其整体功能正常，对缺失的代码重构补全
2. 添加structpack模块，以便业务需要
3. 实现线程调度模块；